# sdl2utils

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt
include/sdl2utils/: color_utils.h  deleters.h  event_utils.h  exceptions.h  guards.h  pointers.h  raii.h
include/sdl2utils/raii/: ScopedAlphaMod.h  ScopedColorMod.h  ScopedRenderDrawColor.h  ScopedRenderTarget.h  ScopedSDLCore.h  ScopedSDLImageExt.h  ScopedSDLMixerExt.h  ScopedSDLTtfExt.h
src/sdl2utils/: color_utils.cpp  event_utils.cpp  exceptions.cpp
